# Aidev

./: .gitignore  AGENTS.md  CLAUDE.md  iran_situation_2026.pptx  iran_slides.py  mcp.json
.claude/agents/: reviewer.md
.claude/commands/: cat.md  ko.md  log.md  meeting.md  novel.md  pptx-adhoc.md  pptx-proposal.md  pptx-report.md
Knowledge/: CLAUDE.md  README.md
Knowledge/categories/: development.md  general.md  operations.md  product.md  travel.md  writing.md
TravelCreator/: CAPABILITIES.md  CLAUDE.md  READ.md  itinerary.md
TravelCreator/Thought/: 2026-04-22_ワディラムの本物ベドウィン.md  2026-04-24_Amman_乗合ミニバスは無秩序なのか.md  2026-04-24_Amman_立体地形都市の坂と疲労感.md  (+10 more)
VideoCreator/: .env.example  AGENTS.md  package-lock.json  package.json  tsconfig.json
_task-management/: TASKS.md
_worklog/: 2026-06-14_knowledge-base構築.md  README.md
aidevforclaude/: .gitignore  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json
essentia-app/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  test-screen.html
jina-reader-mcp/: .env.example  README.md  pyproject.toml
jina-reader-mcp/src/jina_reader_mcp/: client.py  errors.py  schemas.py  server.py  utils.py
jina-reader-mcp/tests/: test_client.py  test_tools.py
jina-reader-mcp/tests/integration/: test_integration.py
knowledge-base/: CLAUDE.md  README.md
logs/: 2026-04-23_session-log.md
murder-mystery/: README.md  generate_pdfs.py
presentations/: generate_stro.py
project-alpha/: CLAUDE.md  INSTRUCTIONS.md
sao-novel/: CLAUDE.md
subtitle-pipeline/: package.json
(+299 files in other folders)
